<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="870dp"
        android:layout_height="526dp"
        android:layout_centerInParent="true"
        android:background="@drawable/black_bg">

        <LinearLayout
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:lineSpacingExtra="25dp"
                android:id="@+id/txt_dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/popup"
                android:textSize="15pt"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="300dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:id="@+id/btn_modify_done1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15pt"
                android:text="@string/cancel"
                android:background="@drawable/btn_popup"
                android:scaleType="fitCenter" />

            <TextView
                android:gravity="center"
                android:id="@+id/btn_modify_done2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15pt"
                android:text="@string/ok"
                android:background="@drawable/btn_popup"
                android:scaleType="fitCenter" />
        </LinearLayout>

    </RelativeLayout>


</LinearLayout >
